# laba6sk

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  LICENSE.rtf  README.md
.github/workflows/: ci.yml
formatter_ex_lib/: formatter_ex.cpp  formatter_ex.h
formatter_lib/: formatter.cpp  formatter.hpp
solver_application/: equation.cpp
solver_lib/: solver.cpp  solver.hpp
